--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MyApp1</string>
     <string name="tv_one">Recipe Name</string>
+    <string name="Filter_Results">Filter Results</string>
 </resources>
